# waaaa

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README
cmake/: FindFFTW.cmake
data/: CMakeLists.txt  net.dosowisko.WAAAA.appdata.xml  pixel.glsl  point.flac  vertex.glsl  waaaa.1  waaaa.desktop
data/icons/: CMakeLists.txt  icon.rc  waaaa.icns
data/levels/: blank.lvl  cinema.lvl  menu.lvl  menuborder.lvl  multi.lvl  raw.lvl
data/vita/: pixel.glsl  vertex.glsl
flatpak/: net.dosowisko.WAAAA.json
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  cinema.c  dosowisko.c  empty.c  loading.c  waaaa.c
